--- a/html/views/overlays/ddtv/index.html
+++ b/html/views/overlays/ddtv/index.html
@@ -11,10 +11,10 @@
 
     <div id="logo"></div>
 
-		<div id="sb" sbContext="ScoreBoard" class="JamScore StyleTraditional" data-setting="Custom.Overlay.ShowJammers">
+		<div id="sb" sbContext="ScoreBoard" class="JamScore StyleTraditional" data-setting="ScoreBoard.FrontendSettings.Overlay.ShowJammers">
 
 			<div class="PanelWrapperTop">
-				<div data-setting="Custom.Overlay.Top" class="Top AnimatedPanel PanelHideTop Wrapper">	
+				<div data-setting="ScoreBoard.FrontendSettings.Overlay.Top" class="Top AnimatedPanel PanelHideTop Wrapper">	
 
           <div class="TopUpper">
             <div class="Team1 LeftHandSide" sbContext="Team(1)">	
@@ -171,7 +171,7 @@
 
 			<div class="PanelWrapperLeft">
 				<div class="LowerThird Wrapper OverlayPanel AnimatedPanel PanelHideLeft">
-					<h4 class="Line1" sbDisplay="Custom.Overlay.LowerThird.Line1" /> <h5 class="Line2" sbDisplay="Custom.Overlay.LowerThird.Line2" />
+					<h4 class="Line1" sbDisplay="ScoreBoard.FrontendSettings.Overlay.LowerThird.Line1" /> <h5 class="Line2" sbDisplay="ScoreBoard.FrontendSettings.Overlay.LowerThird.Line2" />
 				</div>
 			</div>
 
