--- a/html/views/overlays/interactive/index.html
+++ b/html/views/overlays/interactive/index.html
@@ -11,11 +11,11 @@
 
     <div id="logo"></div>
 
-		<div id="sb" sbContext="ScoreBoard" class="JamScore StyleTraditional" data-setting="Custom.Overlay.ShowJammers">
+		<div id="sb" sbContext="ScoreBoard" class="JamScore StyleTraditional" data-setting="ScoreBoard.FrontendSettings.Overlay.ShowJammers">
 
 			<div class="PanelWrapperTop">
 
-				<div data-setting="Custom.Overlay.Score" class="TeamBox AnimatedPanel PanelHideTop Wrapper">	
+				<div data-setting="ScoreBoard.FrontendSettings.Overlay.Score" class="TeamBox AnimatedPanel PanelHideTop Wrapper">	
 					<div class="Team1" sbContext="Team(1)">	
 					<div class="Team Row Wrapper barBackgroundTop"> 
 						<div class="Indicator ColourTeam1 Box">&nbsp;</div>
@@ -52,7 +52,7 @@
 				</div>
 
 			
-			<div data-setting="Custom.Overlay.Clock"  class="ClockBox TopClock AnimatedPanel PanelHideTop Wrapper">
+			<div data-setting="ScoreBoard.FrontendSettings.Overlay.Clock"  class="ClockBox TopClock AnimatedPanel PanelHideTop Wrapper">
 
 					<div class="ClockBarTop Wrapper Row SlideDown ClockNames ShowInJam ShowInLineup ShowInTimeout barBackgroundTop">
 						<div class="Box TextLeft Name" sbDisplay="Name,Number" sbContext="Clock(Period)" sbModify="toClockInitialNumber"></div>
@@ -151,7 +151,7 @@
 
 			<div class="PanelWrapperLeft">
 				<div class="LowerThird Wrapper OverlayPanel AnimatedPanel PanelHideLeft">
-					<h4 class="Line1" sbDisplay="Custom.Overlay.LowerThird.Line1" /> <h5 class="Line2" sbDisplay="Custom.Overlay.LowerThird.Line2" />
+					<h4 class="Line1" sbDisplay="ScoreBoard.FrontendSettings.Overlay.LowerThird.Line1" /> <h5 class="Line2" sbDisplay="ScoreBoard.FrontendSettings.Overlay.LowerThird.Line2" />
 				</div>
 			</div>
 
