change timeout interface
- Official timeouts get their own button
- Selecting a timeout type during a running timeout will change the type
(and credit back the timout to the previous owner, if applicable)
- Pressing the "Timeout" button again will start a new timeout
- Team Timeout buttons are labelled "Team TO" instead of "Timeout"

--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -65,6 +65,10 @@ table.RowTable { border-spacing: 0px; }
 	#TeamTime table.Team tr.Timeout td.OfficialReview button.Active { color: #000; background: #3f3; }
 	#TeamTime table.Team tr.Timeout td.OfficialReviews a { font-size: 200%; }
 	#TeamTime table.Team tr.Timeout td.RetainedOfficialReview button.Active { color: #000; background: #F33; }
+	#TeamTime table.Team tr.Timeout td.OfficialTimeout { position: relative; }
+	#TeamTime table.Team tr.Timeout td.OfficialTimeout>div { position: absolute; left: 50%; width: 100%; }
+	#TeamTime table.Team tr.Timeout td.OfficialTimeout button { transform: translateY(-50%); }
+	#TeamTime table.Team tr.Timeout td.OfficialTimeout button.Active { color: #000; background: #3f3; }
 	#TeamTime table.Team tr.Jammer td.ui-buttonset label.Lead.ui-state-active { background: #3f3; }
 	#TeamTime table.Team tr.Jammer td.ui-buttonset label.StarPass.ui-state-active { background: #3f3; }
 
