make jam control buttons display current function
on main operator screen and mobile operator control

--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -44,14 +44,14 @@ table.RowTable { border-spacing: 0px; }
 	#TeamTime table.TabTable>tbody>tr:last-of-type>td { border-radius: 0px 0px 12px 12px; }
 	#TeamTime table.TabTable>tbody>tr:only-of-type>td { border-radius: 12px; }
 	#TeamTime table.TabTable>tbody>tr.Hidden>td { display: none; }
-
+	
 	#TeamTime table.MetaControl>tbody>tr>td { width: 100%; }
 	#TeamTime table.MetaControl { font-size: 65%; }
 	#TeamTime table.MetaControl>tbody>tr>td { background: #eee; }
 
 	#TeamTime table.JamControl>tbody>tr>td { width: 100%; }
 	#TeamTime table.JamControl>tbody>tr:first-of-type>td { border-radius: 12px; }
-	#TeamTime .UndoControls:not(.ShowUndo) { display: none; }
+	#TeamTime table.JamControl .Label { display: inline-block; min-width:50px; }
 
 	#TeamTime table.Team>tbody>tr>td { width: 50%; }
 	#TeamTime table.Team tr.Name td.Name div { max-height: 100px; max-width: 300px; overflow: hidden; font-size: 150%; }
