Overhaul view settings
- store them in FrontendSettings, so they are kept across games
- add option to display a whiteboard
- add option to en-/disable clock sync
- add option to choose the clock displayed after a timeout
- fix background to solid black
- remove option to disable per jam scores
- also separate settings for ddtv and interactive overlays

--- a/html/views/overlays/ddtv/index.html
+++ b/html/views/overlays/ddtv/index.html
@@ -11,10 +11,10 @@
 
     <div id="logo"></div>
 
-		<div id="sb" sbContext="ScoreBoard" class="JamScore StyleTraditional" data-setting="ScoreBoard.FrontendSettings.Overlay.ShowJammers">
+		<div id="sb" sbContext="ScoreBoard" class="JamScore StyleTraditional" data-setting="ScoreBoard.FrontendSettings.Overlay.DDTV.ShowJammers">
 
 			<div class="PanelWrapperTop">
-				<div data-setting="ScoreBoard.FrontendSettings.Overlay.Top" class="Top AnimatedPanel PanelHideTop Wrapper">	
+				<div data-setting="ScoreBoard.FrontendSettings.Overlay.DDTV.Top" class="Top AnimatedPanel PanelHideTop Wrapper">	
 
           <div class="TopUpper">
             <div class="Team1 LeftHandSide" sbContext="Team(1)">	
@@ -29,7 +29,7 @@
             </div>
 
             <div class="Skew Middle SlideUp ShowInIntermission ShowInTimeout ClockDescription">
-              <div class="DeSkew" sbDisplay="Clock(Intermission).Running, Clock.(Intermission).Number, Clock(Timeout).Name, Clock(Timeout).Running, TimeoutOwner, OfficialReviews, Team(1).Timeouts, Team(2).OfficialReviews, Team(2).Timeouts, Setting(Intermission.PreGame), Setting(Intermission.Intermission), Setting(Intermission.Unofficial), Setting(Intermission.Official), OfficialScore, Clock(Intermission).Number, Clock(Intermission).MaximumNumber" sbModify="clockType"></div>
+              <div class="DeSkew" sbDisplay="Clock(Intermission).Running, Clock.(Intermission).Number, Clock(Timeout).Name, Clock(Timeout).Running, TimeoutOwner, OfficialReviews, Team(1).Timeouts, Team(2).OfficialReviews, Team(2).Timeouts, FrontendSettings.ScoreBoard.Intermission.PreGame, FrontendSettings.ScoreBoard.Intermission.Intermission, FrontendSettingsScoreBoard.Intermission.Unofficial, FrontendSettings.ScoreBoard.Intermission.Official, OfficialScore, Clock(Intermission).Number, Clock(Intermission).MaximumNumber" sbModify="clockType"></div>
             </div>
           </div>
 
@@ -171,7 +171,7 @@
 
 			<div class="PanelWrapperLeft">
 				<div class="LowerThird Wrapper OverlayPanel AnimatedPanel PanelHideLeft">
-					<h4 class="Line1" sbDisplay="ScoreBoard.FrontendSettings.Overlay.LowerThird.Line1" /> <h5 class="Line2" sbDisplay="ScoreBoard.FrontendSettings.Overlay.LowerThird.Line2" />
+					<h4 class="Line1" sbDisplay="ScoreBoard.FrontendSettings.Overlay.DDTV.LowerThird.Line1" /> <h5 class="Line2" sbDisplay="ScoreBoard.FrontendSettings.Overlay.DDTV.LowerThird.Line2" />
 				</div>
 			</div>
 
