--- a/html/views/overlays/wftda/wg_color_jammer.html
+++ b/html/views/overlays/wftda/wg_color_jammer.html
@@ -65,9 +65,8 @@
   </div>
 
   <div id="BottomBarFullWidth">
-    <div id="Team1Logo" class="logos"><img></img></div>
-    <div id="Team2Logo" class="logos"><img></img></div>   
-  </div>
+    <div id="OverlayLogo"><img class="logoscale"></img></div>
+</div>
  
   <div id="BottomBar">
     <div id="Team1TimeOuts" class="TimeOuts"><a></a></div>
