--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -16,6 +16,8 @@ body { margin: 0px; }
 #tabsDiv>div.TabContent>table { width: 100%; border-spacing: 0px; }
 #tabsDiv>div.TabContent>div.Loading { text-align: center; font-weight: bold; font-size: 300%; }
 table.RowTable { border-spacing: 0px; }
+#capsLockWarning { padding: .5em 1em; color: white; }
+#capsLockWarning.Hidden { display: none; }
 
 #GameControl.clickMe { color: green !important; font-size: 200% !important; }
 
