--- a/html/views/overlays/ddtv/index.html
+++ b/html/views/overlays/ddtv/index.html
@@ -11,10 +11,10 @@
 
     <div id="logo"></div>
 
-		<div id="sb" sbContext="ScoreBoard" class="JamScore StyleTraditional" data-setting="ScoreBoard.Settings.Overlay.DDTV.ShowJammers">
+		<div id="sb" sbContext="ScoreBoard" class="JamScore StyleTraditional" data-setting="ScoreBoard.Settings.Setting(Overlay.DDTV.ShowJammers)">
 
 			<div class="PanelWrapperTop">
-				<div data-setting="ScoreBoard.Settings.Overlay.DDTV.Top" class="Top AnimatedPanel PanelHideTop Wrapper">	
+				<div data-setting="ScoreBoard.Settings.Setting(Overlay.DDTV.Top)" class="Top AnimatedPanel PanelHideTop Wrapper">	
 
           <div class="TopUpper">
             <div class="Team1 LeftHandSide" sbContext="Team(1)">	
@@ -29,7 +29,7 @@
             </div>
 
             <div class="Skew Middle SlideUp ShowInIntermission ShowInTimeout ClockDescription">
-              <div class="DeSkew" sbDisplay="Clock(Intermission).Running, Clock.(Intermission).Number, Clock(Timeout).Name, Clock(Timeout).Running, TimeoutOwner, OfficialReviews, Team(1).Timeouts, Team(2).OfficialReviews, Team(2).Timeouts, Settings.ScoreBoard.Intermission.PreGame, Settings.ScoreBoard.Intermission.Intermission, SettingsScoreBoard.Intermission.Unofficial, Settings.ScoreBoard.Intermission.Official, OfficialScore, Clock(Intermission).Number, Clock(Intermission).MaximumNumber" sbModify="clockType"></div>
+              <div class="DeSkew" sbDisplay="Clock(Intermission).Running, Clock.(Intermission).Number, Clock(Timeout).Name, Clock(Timeout).Running, TimeoutOwner, OfficialReviews, Team(1).Timeouts, Team(2).OfficialReviews, Team(2).Timeouts, Settings.Setting(ScoreBoard.Intermission.PreGame), Settings.Setting(ScoreBoard.Intermission.Intermission), Settings.Setting(ScoreBoard.Intermission.Unofficial), Settings.Setting(ScoreBoard.Intermission.Official), OfficialScore, Clock(Intermission).Number, Clock(Intermission).MaximumNumber" sbModify="clockType"></div>
             </div>
           </div>
 
@@ -171,7 +171,7 @@
 
 			<div class="PanelWrapperLeft">
 				<div class="LowerThird Wrapper OverlayPanel AnimatedPanel PanelHideLeft">
-					<h4 class="Line1" sbDisplay="ScoreBoard.Settings.Overlay.DDTV.LowerThird.Line1" /> <h5 class="Line2" sbDisplay="ScoreBoard.Settings.Overlay.DDTV.LowerThird.Line2" />
+					<h4 class="Line1" sbDisplay="ScoreBoard.Settings.Setting(Overlay.DDTV.LowerThird.Line1)" /> <h5 class="Line2" sbDisplay="ScoreBoard.Settings.Setting(Overlay.DDTV.LowerThird.Line2)" />
 				</div>
 			</div>
 
