bugfixes & code cleanup

--- a/html/views/overlays/ddtv/index.html
+++ b/html/views/overlays/ddtv/index.html
@@ -113,7 +113,7 @@
       <div class="PanelWrapperCenter">
         <!-- TEAM ROSTERS -->
         <div class="RosterTeam1 TeamList PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel AnimationDelay" sbContext="Team(1)" >
-          <div class="Skew TeamHeading ColourTeam1"><h1 class="LongName DeSkew" sbDisplay="AlternateName(overlay),Name"></h1></div>
+          <div class="Skew TeamHeading ColourTeam1"><h1 class="LongName DeSkew" sbDisplay="AlternateName(overlay).Name,Name"></h1></div>
           <div class="Skew PenaltyTag"><div class="DeSkew">TEAM ROSTER</div></div>
         </div>
 
@@ -124,7 +124,7 @@
 
 
         <div class="RosterTeam2 TeamList PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel AnimationDelay" sbContext="Team(2)" >
-          <div class="Skew TeamHeading ColourTeam2"><h1 class="LongName DeSkew" sbDisplay="AlternateName(overlay),Name"></h1></div>
+          <div class="Skew TeamHeading ColourTeam2"><h1 class="LongName DeSkew" sbDisplay="AlternateName(overlay).Name,Name"></h1></div>
           <div class="Skew PenaltyTag"><div class="DeSkew">TEAM ROSTER</div></div>
         </div>
 
@@ -136,7 +136,7 @@
         <!-- Penalty Boards -->
 
         <div class="PenaltyTeam1 TeamList PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel AnimationDelay" sbContext="Team(1)" >
-          <div class="Skew TeamHeading ColourTeam1"><h1 class="LongName DeSkew" sbDisplay="AlternateName(overlay),Name"></h1></div>
+          <div class="Skew TeamHeading ColourTeam1"><h1 class="LongName DeSkew" sbDisplay="AlternateName(overlay).Name,Name"></h1></div>
           <div class="Skew PenaltyTag"><div class="DeSkew">PENALTY BOARD</div></div>
         </div>
 
@@ -146,7 +146,7 @@
         </div>
 
         <div class="PenaltyTeam2 TeamList PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel AnimationDelay" sbContext="Team(2)" >
-          <div class="Skew TeamHeading ColourTeam2"><h1 class="LongName DeSkew" sbDisplay="AlternateName(overlay),Name"></h1></div>
+          <div class="Skew TeamHeading ColourTeam2"><h1 class="LongName DeSkew" sbDisplay="AlternateName(overlay).Name,Name"></h1></div>
           <div class="Skew PenaltyTag"><div class="DeSkew">PENALTY BOARD</div></div>
         </div>
 
@@ -158,12 +158,12 @@
 				<div class="Upcoming PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<div>
 						<img class="TeamLogo TeamLogo1" src="" style="float: left;" />
-						<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)" style="margin-top: 2em; margin-left: 4em; margin-right: 0;"></h1>	
+						<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay).Name,Name" sbContext="Team(1)" style="margin-top: 2em; margin-left: 4em; margin-right: 0;"></h1>	
 					</div>
 					<div class="UpcomingVS">VS</div>
 					<div>
 						<img class="TeamLogo TeamLogo2" src="" style="float: right;" />
-						<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)" style="margin-top: 2em; margin-left: 0; margin-right: 4em;"></h1>	
+						<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay).Name,Name" sbContext="Team(2)" style="margin-top: 2em; margin-left: 0; margin-right: 4em;"></h1>	
 					</div>
 				</div>
 
