--- a/html/views/overlays/interactive/index.html
+++ b/html/views/overlays/interactive/index.html
@@ -83,7 +83,7 @@
 
 				<div class="PPJBox Wrapper PanelHideLeft OverlayPanel LargePanel AnimatedPanel">
 					<h1 class="NoLogo">Points Per Jam</h1>
-					<h4 class="htop ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h4>	
+					<h4 class="htop ColourTeam1" sbDisplay="AlternateName(overlay).Name,Name" sbContext="Team(1)"></h4>	
 					<div class="PPJContainer Wrapper">
 						<div class="Wrapper Team Team1">
 							<div class="Period Period1"></div><div class="Period Period2"></div>
@@ -91,13 +91,13 @@
 						<div class="Wrapper Team Team2">
 							<div class="Period Period1"></div><div class="Period Period2"></div>
 						</div> </div>
-					<h4 class="hbottom ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h4>	
+					<h4 class="hbottom ColourTeam2" sbDisplay="AlternateName(overlay).Name,Name" sbContext="Team(2)"></h4>	
 				</div>
 
 
 				<div class="RosterTeam1 RosterTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<img class="TeamLogo TeamLogo1" src="" />
-					<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h1>
+					<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay).Name,Name" sbContext="Team(1)"></h1>
 					<h2>Team Roster</h2>
 				</div>
 				<div class="RosterTeam1 RosterTeam LowerPart AnimationDelay PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
@@ -107,7 +107,7 @@
 
 				<div class="RosterTeam2 RosterTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<img class="TeamLogo TeamLogo2" src="" />
-					<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h1>	
+					<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay).Name,Name" sbContext="Team(2)"></h1>	
 					<h2>Team Roster</h2>
 				</div>
 				<div class="RosterTeam2 RosterTeam LowerPart AnimationDelay PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
@@ -118,7 +118,7 @@
 				<div class="PenaltyTeam1 PenaltyTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<img class="TeamLogo TeamLogo1" src="" />
 					<h1>Penalty Board</h1>
-					<h2 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h2>	
+					<h2 class="ColourTeam1" sbDisplay="AlternateName(overlay).Name,Name" sbContext="Team(1)"></h2>	
 				</div>
 				<div class="PenaltyTeam1 PenaltyTeam AnimationDelay LowerPart PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<div class="Wrapper Team Team1 SortBox">
@@ -128,7 +128,7 @@
 				<div class="PenaltyTeam2 PenaltyTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<img class="TeamLogo TeamLogo2" src="" />
 					<h1>Penalty Board</h1>
-					<h2 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h2>	
+					<h2 class="ColourTeam2" sbDisplay="AlternateName(overlay).Name,Name" sbContext="Team(2)"></h2>	
 				</div>
 				<div class="PenaltyTeam2 PenaltyTeam AnimationDelay LowerPart PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<div class="Wrapper Team Team2 SortBox">
@@ -138,12 +138,12 @@
 				<div class="Upcoming PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<div>
 						<img class="TeamLogo TeamLogo1" src="" style="float: left;" />
-						<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)" style="margin-top: 2em; margin-left: 4em; margin-right: 0;"></h1>	
+						<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay).Name,Name" sbContext="Team(1)" style="margin-top: 2em; margin-left: 4em; margin-right: 0;"></h1>	
 					</div>
 					<div class="UpcomingVS">VS</div>
 					<div>
 						<img class="TeamLogo TeamLogo2" src="" style="float: right;" />
-						<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)" style="margin-top: 2em; margin-left: 0; margin-right: 4em;"></h1>	
+						<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay).Name,Name" sbContext="Team(2)" style="margin-top: 2em; margin-left: 0; margin-right: 4em;"></h1>	
 					</div>
 				</div>
 
