--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -60,21 +60,18 @@ table.RowTable { border-spacing: 0px; }
 	#TeamTime table.Team tr.Name td.Name div a.AlternateName { display: none; }
 	#TeamTime table.Team tr.Name td.Logo img { height: 50px; vertical-align: middle; }
 	#TeamTime table.Team tr.Score td.Score a { font-size: 300%; }
-	#TeamTime table.Team tr.Score td a.Change { font-size: 200%; line-height: 175%; }
+	#TeamTime table.Team tr.Score td a.TripScore { font-size: 200%; line-height: 175%; }
 	#TeamTime table.Team tr.Score td a.JamScore { font-size: 200%; line-height: 175%; }
-	#TeamTime table.Team tr.Timeout td.Timeout button.Active { color: #000; background: #3f3; }
 	#TeamTime table.Team tr.Timeout td.Timeouts a { font-size: 200%; }
-	#TeamTime table.Team tr.Timeout td.OfficialReview button.Active { color: #000; background: #3f3; }
 	#TeamTime table.Team tr.Timeout td.OfficialReviews a { font-size: 200%; }
-	#TeamTime table.Team tr.Timeout td.RetainedOfficialReview button.Active { color: #000; background: #F33; }
 	#TeamTime table.Team tr.Timeout td.OfficialTimeout { position: relative; }
 	#TeamTime table.Team tr.Timeout td.OfficialTimeout>div { position: absolute; left: 50%; width: 100%; }
 	#TeamTime table.Team tr.Timeout td.OfficialTimeout button { transform: translateY(-50%); }
-	#TeamTime table.Team tr.Timeout td.OfficialTimeout button.Active { color: #000; background: #3f3; }
 	#TeamTime table.Team tr.Jammer td.ui-buttonset label.Lead.ui-state-active { background: #3f3; }
 	#TeamTime table.Team tr.Jammer td.ui-buttonset label.StarPass.ui-state-active { background: #3f3; }
 
-	#TeamTime table.Team tr.Jammer button.Box.Active { color: #000; background: #F33; }
+	#TeamTime table.Team button.Box.Active { color: #000; background: #F33; }
+	#TeamTime table.Team button.Active:not(.Box) { color: #000; background: #3F3; }
 
 	#TeamTime table.Time>tbody>tr>td { width: 20%; }
 	#TeamTime table.Time tr.Name td.Name.Running { background: #3f3; }
